# asr_lib_ism

./: CMakeLists.txt  License.txt  README.md  package.xml
libism/: CMakeLists.txt
libism/ISM/: CMakeLists.txt  typedef.hpp
libism/ISM/combinatorial_optimization/: AcceptanceFunction.hpp  CoolingSchedule.cpp  CoolingSchedule.hpp  CostDeltaAcceptanceFunction.cpp  CostDeltaAcceptanceFunction.hpp  CostDifferenceDeltaAcceptanceFunction.hpp  CostFunction.hpp  ExponentialCoolingSchedule.cpp  ExponentialCoolingSchedule.hpp  HillClimbingAlogrithm.hpp  NeighbourhoodFunction.hpp  OptimizationAlgorithm.hpp  RecordHuntAlgorithm.hpp  SimulatedAnnealingAlgorithm.hpp
libism/ISM/combinatorial_trainer/: Cluster.cpp  Cluster.hpp  CombinatorialTrainer.cpp  CombinatorialTrainer.hpp  CombinatorialTrainerParameters.hpp  ConnectivityChecker.cpp  ConnectivityChecker.hpp  EvaluationResult.hpp  Evaluator.hpp  HeightChecker.cpp  HeightChecker.hpp  ImplicitShapeModel.hpp  ObjectRelation.cpp  ObjectRelation.hpp  ObjectSetValidator.cpp  ObjectSetValidator.hpp  OptimizationRunner.cpp  OptimizationRunner.hpp  OptimizationRunnerFactory.cpp  OptimizationRunnerFactory.hpp  TestSetGenerator.cpp  TestSetGenerator.hpp  Tester.cpp  Tester.hpp  Topology.hpp  TopologyGenerator.cpp  TopologyGenerator.hpp  TopologyGeneratorNaive.cpp  TopologyGeneratorNaive.hpp  TopologyGeneratorPaper.cpp  TopologyGeneratorPaper.hpp  TopologyManager.cpp  TopologyManager.hpp  TopologyValidationResultContainer.hpp  Tree.cpp  Tree.hpp  TreeValidator.hpp  WeightedSum.cpp  WeightedSum.hpp
libism/ISM/common_type/: JsonStream.cpp  JsonStream.hpp  Object.cpp  Object.hpp  ObjectSet.cpp  ObjectSet.hpp  Pattern.cpp  Pattern.hpp  Point.cpp  Point.hpp  Pose.cpp  Pose.hpp  Quaternion.cpp  Quaternion.hpp  RecognitionResult.cpp  RecognitionResult.hpp  RecordedPattern.cpp  RecordedPattern.hpp  Serializable.hpp  Track.cpp  Track.hpp  Tracks.cpp  Tracks.hpp  VoteSpecifier.cpp  VoteSpecifier.hpp
libism/ISM/heuristic_trainer/: DataCollector.hpp  DirectionOrientationRelationHeuristic.cpp  DirectionOrientationRelationHeuristic.hpp  DirectionRelationHeuristic.cpp  DirectionRelationHeuristic.hpp  Heuristic.hpp  ManuallyDefPseudoHeuristic.cpp  ManuallyDefPseudoHeuristic.hpp  StaticRelationHeuristic.cpp  StaticRelationHeuristic.hpp  Trainer.cpp  Trainer.hpp
libism/ISM/rating/: APORater.hpp  BaseRater.hpp  RatingData.hpp  SimpleRater.hpp
libism/ISM/recognizer/: Recognizer.cpp  Recognizer.hpp  VotedPose.cpp  VotedPose.hpp  VotingBin.cpp  VotingBin.hpp  VotingResult.hpp  VotingResultCalculator.cpp  VotingResultCalculator.hpp  VotingSpace.cpp  VotingSpace.hpp
libism/ISM/recorder/: Recorder.cpp  Recorder.hpp
libism/ISM/soci/src/core/: connection-pool.cpp  rowset.h  session.h
libism/ISM/tools/: DataCleaner.hpp  DataMerger.cpp  DataMerger.hpp  MarkerRotator.hpp  PoseInterpolator.cpp  PoseInterpolator.hpp  RecordedObjectsTransformer.cpp  RecordedObjectsTransformer.hpp  RotationInvariantObjectsRotator.cpp  RotationInvariantObjectsRotator.hpp
libism/ISM/utility/: DocumentationHelper.cpp  DocumentationHelper.hpp  DotHelper.cpp  DotHelper.hpp  GeometryHelper.cpp  GeometryHelper.hpp  LogHelper.cpp  LogHelper.hpp  MathHelper.hpp  SVGHelper.cpp  SVGHelper.hpp  TableHelper.cpp  TableHelper.hpp  Util.cpp  Util.hpp  viz_helper.cpp  viz_helper.hpp
libism/src/: dataMerger.cpp  markerRotator.cpp  modelCleaner.cpp  poseInterpolator.cpp  recordCleaner.cpp  recordedObjectsTransformer.cpp  rotationInvariantObjectsRotator.cpp  testRunner.cpp  trainer.cpp  validator.cpp
libism/src/test_cases/: combinatorialTrainerEvaluator.cpp  randomDemoRecorder.cpp  randomDemoRecorder.hpp  randomTestRunner.cpp  simpleEvaluator.cpp
licenses/: third_party_licenses.txt
